--- a/azkar-sabah.html
+++ b/azkar-sabah.html
@@ -12,8 +12,8 @@
         <nav>
             <a class="logo" href="/index.html">وَذَكِّرْ فَإِنَّ الذِّكْرَىٰ تَنفَعُ الْمُؤْمِنِينَ</a>
             <div class="link">
-                <button><a href="/src/Sabah/azkar-sabah.html">أذكار الصباح</a></button>
-                <button><a href="/src/Masa/azkar-masa.html">أذكار المساء</a></button>
+                <button><a href="azkar-sabah.html">أذكار الصباح</a></button>
+                <button><a href="azkar-masa.html">أذكار المساء</a></button>
             </div>
         </nav>
         <p>
@@ -27,6 +27,6 @@
         <div class="right-section">
         </div>
     </div>
-    <script src="main.js"></script>
+    <script src="main-sabah.js"></script>
 </body>
 </html>
