--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <nav>
             <a class="logo" href="/index.html">وَذَكِّرْ فَإِنَّ الذِّكْرَىٰ تَنفَعُ الْمُؤْمِنِينَ</a>
             <div class="link">
-                <button><a href="/src/Sabah/azkar-sabah.html">أذكار الصباح</a></button>
-                <button><a href="/src/Masa/azkar-masa.html">أذكار المساء</a></button>
+                <button><a href="azkar-sabah.html">أذكار الصباح</a></button>
+                <button><a href="azkar-masa.html">أذكار المساء</a></button>
             </div>
         </nav>
     </div>
+
 
 </body>
 
