--- a/azkar-sabah.html
+++ b/azkar-sabah.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../../assets/mosque.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/mosque.png" type="image/x-icon">
     <title>أذكار الصباح</title>
-    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
