--- a/azkar-masa.html
+++ b/azkar-masa.html
@@ -28,10 +28,12 @@
             والبركة ما لا يدركه إلّا من داوم عليها.
         </p>
         <h1>أذكار المساء</h1>
-        <div class="right-section">
-        </div>
+        <div class="content"></div>
+        <footer>❤️ صدقة جارية</footer>
     </div>
-    <script src="main-masa.js"></script>
-
+    <script src="main.js"></script>
+    <script>
+        getAzkarMasa(); 
+    </script>
 </body>
 </html>
