--- a/azkar-sabah.html
+++ b/azkar-sabah.html
@@ -24,9 +24,12 @@
             والبركة ما لا يدركه إلّا من داوم عليها.
         </p>
         <h1>أذكار الصباح</h1>
-        <div class="right-section">
-        </div>
+        <div class="content"></div>
+        <footer>❤️ صدقة جارية</footer>
     </div>
-    <script src="main-sabah.js"></script>
+    <script src="main.js"></script>
+    <script>
+        getAzkarSabah(); // Call the Sabah function here
+    </script>
 </body>
 </html>
