--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 </head>
 
 <body>
-    <div class="container">
+    <main class="container">
         <nav>
-            <a class="logo" href="/index.html">وَذَكِّرْ فَإِنَّ الذِّكْرَىٰ تَنفَعُ الْمُؤْمِنِينَ</a>
+            <a class="logo" href="/">وَذَكِّرْ فَإِنَّ الذِّكْرَىٰ تَنفَعُ الْمُؤْمِنِينَ</a>
             <div class="link">
                 <button><a href="azkar-sabah.html">أذكار الصباح</a></button>
                 <button><a href="azkar-masa.html">أذكار المساء</a></button>
             </div>
         </nav>
-    </div>
-
-
+        
+        <footer>❤️ صدقة جارية</footer>
+    </main>
+    
+    <script src="main.js"></script>
 </body>
 
 </html>
