--- a/azkar-sabah.html
+++ b/azkar-sabah.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <nav>
-            <a class="logo" href="/index.html">وَذَكِّرْ فَإِنَّ الذِّكْرَىٰ تَنفَعُ الْمُؤْمِنِينَ</a>
+            <a class="logo" href="/">وَذَكِّرْ فَإِنَّ الذِّكْرَىٰ تَنفَعُ الْمُؤْمِنِينَ</a>
             <div class="link">
                 <button><a href="azkar-sabah.html">أذكار الصباح</a></button>
                 <button><a href="azkar-masa.html">أذكار المساء</a></button>
