--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main class="container">
         <nav>
-            <a class="logo" href="/">وَذَكِّرْ فَإِنَّ الذِّكْرَىٰ تَنفَعُ الْمُؤْمِنِينَ</a>
+            <a class="logo" href="/azkar">وَذَكِّرْ فَإِنَّ الذِّكْرَىٰ تَنفَعُ الْمُؤْمِنِينَ</a>
             <div class="link">
                 <button><a href="azkar-sabah.html">أذكار الصباح</a></button>
                 <button><a href="azkar-masa.html">أذكار المساء</a></button>
